k8s/k8s/integration/connector-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trust-test-connector-ingress
  namespace: trust-test
spec:
  ingressClassName: nginx
  rules:
    - host: gitlab.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 80
    - host: jenkins.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
    - host: jira.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jira-mock
                port:
                  number: 8080
